fixing squashy titile issue-2 style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,18 +391,14 @@ section.section-show {
 .section-title h2 {
   font-size: 14px;
   font-weight: 500;
-  padding: 0;
-  line-height: 1.2px;
+  /*padding: 0;*/
+  line-height: 1.4;
   margin: 0 0 20px 0;
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
   font-family: "Poppins", sans-serif;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-
+    word-break: break-word;
 }
 
 .section-title h2::after {
@@ -418,11 +414,15 @@ section.section-show {
 @media (max-width: 768px) {
   .section-title h2 {
     font-size: 12px;
-    white-space: normal;
+      line-height: 1.3;
+     letter-spacing: 1px;
+     word-break: break-word;
   }
   .section-title h2::after {
     width: 40px;
     margin-left: 6px;
+    vertical-align: middle;
+
   }
 }
 
